# logic/user.go
@@ -5,6 +5,7 @@ import (
 	"LibraryTest/tools"
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"strconv"
 )
 
 // Borrow godoc
@@ -12,14 +13,18 @@ import (
 // @Summary		借阅图书
 // @Description 借阅指定书名的图书
 // @Tags user
-// @Router 	/user/book/{book_name} [POST]
+// @Param Debug header string false "Debug header" default(123)
+// @Param book_id path string false "图书ID"
+// @response 200,500 {object} tools.HttpCode{}
+// @Router 	/user/book/{book_id} [POST]
 func Borrow(c *gin.Context) {
 	//idAny, _ := c.Get("userId")
 	//id := idAny.(int64)
 	var id int64
 	id = 1
-	bookName := c.Param("book_name")
-	ok := dao.Borrow(id, bookName)
+	bookIdStr := c.Param("book_id")
+	bookId, _ := strconv.ParseInt(bookIdStr, 10, 64)
+	ok := dao.Borrow(id, bookId)
 	if !ok {
 		c.JSON(http.StatusOK, tools.HttpCode{
 			Code:    tools.DOErr,
@@ -33,7 +38,7 @@ func Borrow(c *gin.Context) {
 		Message: "图书借阅成功",
 		Data:    struct{}{},
 	})
-
+	return
 }
 
 // GiveBack godoc
@@ -41,14 +46,18 @@ func Borrow(c *gin.Context) {
 // @Summary		归还图书
 // @Description 归还指定书名的图书
 // @Tags user
-// @Router 		/user/book/{book_name} [GET]
+// @Param Debug header string false "Debug" default(123)
+// @Param book_id path string false "图书ID"
+// @response 200,500 {object} tools.HttpCode{}
+// @Router 		/user/book/{book_id} [GET]
 func GiveBack(c *gin.Context) {
 	//idAny, _ := c.Get("userId")
 	//id := idAny.(int64)
 	var id int64
 	id = 1
-	bookName := c.Param("book_name")
-	ok := dao.GiveBack(id, bookName)
+	bookIdStr := c.Param("book_id")
+	bookId, _ := strconv.ParseInt(bookIdStr, 10, 64)
+	ok := dao.GiveBack(id, bookId)
 	if !ok {
 		c.JSON(http.StatusOK, tools.HttpCode{
 			Code:    tools.DOErr,
@@ -62,6 +71,7 @@ func GiveBack(c *gin.Context) {
 		Message: "图书归还成功",
 		Data:    struct{}{},
 	})
+	return
 }
 
 // GetUser godoc
@@ -69,10 +79,11 @@ func GiveBack(c *gin.Context) {
 // @Summary 查看用户信息
 // @Description 查看用户信息
 // @Tags user
+// @Param Debug header string false "Debug header" default(123)
+// @response 200,500 {object} tools.HttpCode{}
 // @Router /user [GET]
 func GetUser(c *gin.Context) {
-	//idAny, err := c.Get("userId")
-	//id := idAny.(int)
+	//id,err := c.Get("userId")
 	//if err == false {
 	//	c.JSON(http.StatusOK, tools.HttpCode{
 	//		Code:    tools.UnLoginErr,
@@ -94,7 +105,7 @@ func GetUser(c *gin.Context) {
 	c.JSON(http.StatusOK, tools.HttpCode{
 		Code:    tools.OK,
 		Message: "用户信息查询成功",
-		Data:    struct{}{},
+		Data:    user,
 	})
 	return
 }
@@ -104,6 +115,10 @@ func GetUser(c *gin.Context) {
 // @Summary 修改用户信息
 // @Description 修改用户信息
 // @Tags user
+// @Param Debug header string false "Debug header" default(123)
+// @Param name formData string false "用户名"
+// @Param pwd formData string false "密码"
+// @response 200,500 {object} tools.HttpCode
 // @Router /user [PUT]
 func PutUser(c *gin.Context) {
 	//idAny, _ := c.Get("userId")
@@ -119,7 +134,7 @@ func PutUser(c *gin.Context) {
 		return
 	}
 	user.Id = id
-	err := dao.PutUser(&user)
+	err := dao.PutUser(user)
 	if err != nil {
 		c.JSON(http.StatusOK, tools.HttpCode{
 			Code:    tools.DOErr,
@@ -141,13 +156,18 @@ func PutUser(c *gin.Context) {
 // @Summary 查看自己的借阅记录
 // @Description 查看自己的借阅记录
 // @Tags user
+// @Param Debug header string false "Debug header" default(123)
+// @Param page query string false "页数"
+// @response 200,500 {object} tools.HttpCode{[]dao.book}
 // @Router /user/book [GET]
 func GetMyBook(c *gin.Context) {
+	pageStr := c.DefaultQuery("page", "1")
+	page, _ := strconv.ParseInt(pageStr, 10, 64)
 	//idAny, _ := c.Get("userId")
 	//id := idAny.(int64)
 	var id int64
 	id = 1
-	recode := dao.GetMyBook(id)
+	recode := dao.GetMyBook(id, page)
 	if len(recode) == 0 {
 		c.JSON(http.StatusOK, tools.HttpCode{
 			Code:    tools.UnFoundErr,
